--- a/test-scss/masterclass.html
+++ b/test-scss/masterclass.html
@@ -43,7 +43,7 @@
                         <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">შეთავაზებები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href="" class="nav__a c-light-text c-hover-blue transblock col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3ition helvetica-75">ბლოგი</a>
+                        <a href="" class="nav__a c-light-text c-hover-blue transblock col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4ition helvetica-75">ბლოგი</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">ჩვენ შესახებ</a>
@@ -141,11 +141,11 @@
             </div>
         </div>
     </header>
-    <section class="popular__courses">
+    <section class="popular__courses py-60">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
                 <!-- for sale overlay add sale class to  block -->
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -329,7 +329,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -375,7 +375,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
