--- a/test-scss/masterclass.html
+++ b/test-scss/masterclass.html
@@ -154,24 +154,24 @@
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
                             <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mb-1 c-black helvetica-75">საზოგადოებასთან 
+                                    ურთიერთობა ციფრულ 
+                                    ეპოქაში</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 mt-3 pt-1 c-card-text helvetica-55 d-none d-md-block mb-1 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
+                            <div class="bottom mt-4 d-flex align-items-center justify-content-between pr-3">
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-1 text__c__left br-c-light-blue">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
+                                <div class="right__side d-none d-md-flex">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
@@ -200,24 +200,24 @@
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
                             <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mb-1 c-black helvetica-75">საზოგადოებასთან 
+                                    ურთიერთობა ციფრულ 
+                                    ეპოქაში</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 mt-3 pt-1 c-card-text helvetica-55 d-none d-md-block mb-1 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
+                            <div class="bottom mt-4 d-flex align-items-center justify-content-between pr-3">
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-1 text__c__left br-c-light-blue">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
+                                <div class="right__side d-none d-md-flex">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
@@ -236,8 +236,7 @@
 
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -246,24 +245,24 @@
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
                             <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mb-1 c-black helvetica-75">საზოგადოებასთან 
+                                    ურთიერთობა ციფრულ 
+                                    ეპოქაში</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 mt-3 pt-1 c-card-text helvetica-55 d-none d-md-block mb-1 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
+                            <div class="bottom mt-4 d-flex align-items-center justify-content-between pr-3">
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-1 text__c__left br-c-light-blue">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
+                                <div class="right__side d-none d-md-flex">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
@@ -282,8 +281,7 @@
 
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -292,24 +290,24 @@
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
                             <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mb-1 c-black helvetica-75">საზოგადოებასთან 
+                                    ურთიერთობა ციფრულ 
+                                    ეპოქაში</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 mt-3 pt-1 c-card-text helvetica-55 d-none d-md-block mb-1 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
+                            <div class="bottom mt-4 d-flex align-items-center justify-content-between pr-3">
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-1 text__c__left br-c-light-blue">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
+                                <div class="right__side d-none d-md-flex">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
@@ -328,8 +326,7 @@
 
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -338,24 +335,24 @@
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
                             <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mb-1 c-black helvetica-75">საზოგადოებასთან 
+                                    ურთიერთობა ციფრულ 
+                                    ეპოქაში</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 mt-3 pt-1 c-card-text helvetica-55 d-none d-md-block mb-1 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
+                            <div class="bottom mt-4 d-flex align-items-center justify-content-between pr-3">
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-1 text__c__left br-c-light-blue">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
+                                <div class="right__side d-none d-md-flex">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
@@ -374,8 +371,7 @@
 
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mb-4">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -384,24 +380,24 @@
                             </div>
                             <img src="./img/face.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
                             <div class="d-flex- flex-column px-3 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mb-1 c-black helvetica-75">საზოგადოებასთან 
+                                    ურთიერთობა ციფრულ 
+                                    ეპოქაში</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 mt-3 pt-1 c-card-text helvetica-55 d-none d-md-block mb-1 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
-                                </div>
-                                <div class="right__side">
+                            <div class="bottom mt-4 d-flex align-items-center justify-content-between pr-3">
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-1 text__c__left br-c-light-blue">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
+                                <div class="right__side d-none d-md-flex">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
